cloud/w10/temp/gatekeeper/constraints/02-require-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLimits
metadata:
  name: require-resource-limits
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["kube-system", "gatekeeper-system", "argocd", "external-secrets"]
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
