cloud/w10/temp/gatekeeper/constraints/03-disallow-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowRoot
metadata:
  name: disallow-run-as-root
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["kube-system", "gatekeeper-system", "argocd", "external-secrets"]
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
