cloud/w10/temp/gatekeeper/constraints/04-disallow-host-network.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowHostNetwork
metadata:
  name: disallow-host-network
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["kube-system", "gatekeeper-system", "argocd", "external-secrets"]
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
